hphp/test/zend/good/ext/imap/tests/bug44098.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("imap")) {
        die("skip imap extension not available");
}
}
