hphp/test/zend/bad/ext/phar/tests/phar_setsignaturealgo1.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if ( extension_loaded("hash")) die("skip extension hash conflicts"); ?>
<?php if (!defined("Phar::PGP")) die("skip PGP Signature algorithm not available"); ?>